fix profile picture overflowing out of frame

--- a/frontend/app/pages/instructor/newInstructor.css
+++ b/frontend/app/pages/instructor/newInstructor.css
@@ -15,6 +15,9 @@ button {
 }
 img {
   width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
 }
 .title {
   display: flex;
